Fix spacing issues

--- a/src/components/AddNewBook.module.css
+++ b/src/components/AddNewBook.module.css
@@ -27,7 +27,7 @@ hr {
 }
 
 .inputs:nth-child(1) {
-  width: 400px;
+  width: 500px;
 }
 
 .inputs:nth-child(2) {
